ADDED: redis for caching and speed access

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=never
+
+spring.data.redis.host=redis-13158.c267.us-east-1-4.ec2.cloud.redislabs.com
+spring.data.redis.port=13158
+spring.data.redis.password=bu8KRZPvSEPX4ZiTSdRhm8IsK7cHj1NO
+
+spring.cache.type=redis
+spring.cache.port=13158
+spring.cache.host=redis-13158.c267.us-east-1-4.ec2.cloud.redislabs.com
+spring.cache.redis.time-to-live=60000
